@@ -1,3 +1,8 @@
+2010-11-23  Ulrich Mueller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-elisp-common):
+	Add elisp-need-emacs function.
+
 2010-11-04  Christian Faulhammer  <fauli@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-darcs):
